add docker and fix unique